--- a/style.css
+++ b/style.css
@@ -21,24 +21,71 @@
       margin-left: 30px;
     }
   }
+  .d_none{
+    display: none;
+  }
   main{
     height: 100vh;
     width: 100%;
-    background-color: #05171e;
+    background-color: #05171e;    
     color: white;
     display: flex;
     flex-direction: column;
     text-align: center;
     h1{
       margin-top: 20px;
+      margin-bottom: 50px;
       @media (max-width: 510px ){
         font-size: 1.2rem;
       }
       
     }
+    .overlay{
+      position: fixed;
+      top: 0;
+      left: 0;
+      height: 100vh;
+      width: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
+      transition: opacity 0.3s ease;
+      z-index: 9999;
+    }
+    #singleImg{
+      max-width: 90%;
+      max-height: 80%;
+      border-radius: 10px;
+      object-fit: contain;
+    }
+    .close-btn{
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      font-size: 30px;
+      color: white;
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      z-index: 1000;
+    }
     img{
-      width: 300px;
-      height: auto;
+      width: 120px;
+      height: 100px;
+      border-radius: 15px;
+      margin-left: 15px;
+      margin-bottom: 15px;
+      @media (max-width: 350px){
+        width: 100px;
+        height: 80px;
+      }
+    }
+    img:hover{
+      cursor: pointer;
+      filter: drop-shadow(0px 0px 4px #ffffff);
+    }
+    #content{
+      display: ruby;
+      margin-left: 30px;
+      margin-right: 30px;
     }
   }
   footer{
