--- a/style.css
+++ b/style.css
@@ -50,11 +50,21 @@
       transition: opacity 0.3s ease;
       z-index: 9999;
     }
-    #singleImg{
-      max-width: 90%;
-      max-height: 80%;
-      border-radius: 10px;
-      object-fit: contain;
+    .cardview{
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      margin-top: 100px;
+      img{
+        margin-left: 0px;
+        margin-bottom: 0px;
+        width: 60%;
+        height: 80%;
+      }
+      img:hover{
+        cursor: pointer;
+        filter: none;
+      }
     }
     .close-btn{
       position: absolute;
@@ -66,6 +76,13 @@
       border: none;
       cursor: pointer;
       z-index: 1000;
+    }
+    .switch-btn{
+      background: transparent;
+      color: white;
+      border: none;
+      font-size: 30px;
+      cursor: pointer;
     }
     img{
       width: 120px;
